# HAN_LAB

./: .gitignore  AGENTS.md  README.md  pyproject.toml
archive/: ex_prompt  ollama_24h_monitor.py  ollama_optimized_test.py  ollama_temp_test.py  ollama_with_logging.py
core/: kospi200.xlsx  publish.py
core/ai/: __init__.py  gemini.py  ollama.py
core/chart/: __init__.py  _constants.py  _utils.py  indicators.py  metadata.py  renderer.py  sampler.py
core/finance/: __init__.py  ohlcv.py
core/screener/: __init__.py  expression.py  indicators.py  nlp.py  screener.py
experiments/: capability_map.md  chart_demo.py  debate_log.txt  debate_simulation.py  finance_download_test.py  full_pipeline_test.py  gemini_test.py  ollama_test.py  quiz_data.json  quiz_solve.md  quiz_solver.py  screener_test.py  upload_yuhan_report.py
experiments/browser_agent/: README.md  dom_indexer.py  main.py  run_suite.py  test_rss_reddit.py
experiments/insight_pipeline/: _smoke_extract.py  channel_map.py  chunk.py  clean.py  extract.py  prompts.py  run.py  schema.py
experiments/research_agent/: HANDOFF.md
experiments/youtube_whisper/: _build_list.py  _preview_channels.py  channel_fetch.py  list.txt  (+3 more)
study/: 01_series.py  02_dataframe_basics.py  03_indexing_selection.py  04_filtering.py  05_manipulation.py  06_statistics_summary.py  07_sorting.py  08_missing_data.py  09_groupby_agg.py  10_combining_data.py  11_file_io.py  12_transformations.py  data_frame.md  finance_study.py  initialization.py  select_dataframe.py  xgboost_scratch_sin.py
test_ohlcv_cache/: 000660.pkl  005380.pkl
(+547 files in other folders)
