[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "han-lab"
version = "0.1.0"
description = "Joy's personal lab monorepo"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
